translatable/tests/integration/translation/path/fail_generic_arguments.rs
#[allow(unused_imports)]
use translatable::translation;

fn main() {
    translation!("es", static greetings::formal<String>);
}
